# digit-recognizer

./: .gitignore  README.md  pyproject.toml
docs/: 2026-06-26-digit-recognizer-design.md  plan.md  tutorial_bilingual.md  tutorial_guide.md
src/: 01_data_prep.py  01_data_prep_cv.py  02_cv_train.py  02_model.py  02b_model_acc.py  03_evaluate.py  03b_evaluate_acc.py  04_cv_ensemble.py  04_ensemble.py  04_predict.py  04b_predict_acc.py
